# dumont

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yaml  rust-toolchain.toml
.devcontainer/: .env  devcontainer.json
.github/workflows/: create-artifacts.yml  on-main.yml  on-pull-request.yml  pr.yml  publish.yml
deployment/kube/: dumont.Deployment.yaml  dumont.Namespace.yaml  dumont.Service.yaml  dumont.ServiceMonitor.yaml  postgresql.ConfigMap.yaml  postgresql.Service.yaml  postgresql.StatefulSet.yaml
dev-config/: example-policy.toml
dev-config/otel/: Dockerfile
docs/: api.md  todo.md
dumont-backend/: Cargo.toml
dumont-backend-base/: Cargo.toml
dumont-backend-base/src/: lib.rs
dumont-backend-mem/: Cargo.toml
dumont-backend-mem/src/: lib.rs
dumont-backend-postgres/: Cargo.toml  dumont.db
dumont-backend-postgres/src/: db_models.rs  lib.rs
dumont-backend-sqlite/: dumont.db
dumont-backend-sqlite/migrations/: 20210228191644_initial-migration.sql
dumont-backend-sqlite/src/: db_models.rs  lib.rs
dumont-backend/src/: lib.rs
dumont-models/: Cargo.toml
dumont-models/src/: models.rs  operations.rs
dumont-web-server/: Cargo.toml
dumont-web-server/migrations/: 20210228191644_initial-migration.sql
dumont-web-server/src/: logging.rs  main.rs  test_utils.rs
dumont-web-server/src/api/: metrics.rs  mod.rs  orgs.rs  repos.rs  versions.rs
dumont-web-server/src/backend/: mod.rs  models.rs
dumont-web-server/src/database/: mod.rs  org_queries.rs  repo_label_queries.rs  repo_queries.rs  revision_label_queries.rs  revision_queries.rs
dumont-web-server/src/database/entity/: flyway_schema_history.rs  mod.rs  organization.rs  prelude.rs  repository.rs  repository_label.rs  repository_revision.rs  repository_revision_label.rs
dumont-web-server/src/policy/: mod.rs
dumont-webserver/: Cargo.toml  docker-compose.dev.yaml  mod.rs  orginization.rs  prelude.rs  repository.rs  repository_labels.rs  repository_revision.rs  repository_revision_labels.rs
dumont-webserver/migrations/: 20210228191644_initial-migration.sql  20211002225335_install-default-version-strategy.sql
dumont-webserver/migrations/psql/: 20210228191644_initial-migration.sql
dumont-webserver/src/: main.rs  test_utils.rs
dumont-webserver/src/api/: metrics.rs  mod.rs  operations.rs  orgs.rs  repos.rs  versions.rs
dumont-webserver/src/backend/: mod.rs  models.rs
dumont-webserver/src/backend/memory/: mod.rs
dumont-webserver/src/backend/postgres/: mod.rs
dumont-webserver/src/database/: common_tests.rs  mod.rs  models.rs  org_queries.rs  repo_label_queries.rs  repo_queries.rs  reversion_label_queries.rs  reversion_queries.rs
dumont-webserver/src/database/entity/: mod.rs  organization.rs  prelude.rs  repository.rs  repository_label.rs  repository_metadata.rs  repository_revision.rs  repository_revision_label.rs
dumont-webserver/src/policy/: mod.rs
samples/: cleanup.sh  load-data.sh
src/: cli.rs  errors.rs  lib.rs  logging.rs
