[package]
name = "dumont"
version = "0.1.0"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
tokio = { version = "1.1", features = [ "full" ] }
log = "0.4"
dotenv = "*"
async-trait = "0.1"
flexi_logger = { version = "0.17", features = ["specfile", "compress"]  }
clap = { version = "3.0.0-beta.2" }
error-chain = "0.12"
serde = { version =  "1", features = ["rc", "derive"] }
serde_json = "1"
