[package]
name = "dumont-backend"
version = "0.1.0"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.0"
tracing-subscriber = "0.2.16"
tracing = "0.1.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.42"
dumont-backend-mem = { path = "../dumont-backend-mem" }
dumont-backend-base = { path = "../dumont-backend-base" }
dumont-models = { path = "../dumont-models" }